--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpg" href="https://static.vecteezy.com/system/resources/previews/000/356/822/non_2x/invoice-vector-icon.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generador de Facturas</title>
     <link rel="stylesheet" href="style.css" />
